Agregué carga de modelos con pesos en punto flotante de 16 bits. Eliminé el nombre del proyecto en el script porque se genera en linea de comandos. El uso de bfloat16 hace que haya muchos menos OOM errors ya que reduce dramáticamente el tamaño del modelo en VRAM. Al parecer T5-Large es el que mejor se desempeña en ATS.

--- a/config_seq2seq_T5.yaml
+++ b/config_seq2seq_T5.yaml
@@ -12,6 +12,6 @@ parameters:
   epochs:
     values: [2, 4, 8]
   optimizer:
-    values: ["adam", "adamw"]
+    values: ["adam", "adamw", "sgd", "asgd"]
   hf_model_name:
-    values: ["t5-small", "t5-base", "t5-large", "google/t5-v1_1-base", "google/flan-t5-base", "google/flan-ul2", "google/umt5-small", "google/umt5-base"]
+    values: ["t5-small", "t5-base", "t5-large", "google/t5-v1_1-base", "google/flan-t5-base", "google/flan-t5-large", "google/flan-ul2", "google/umt5-small", "google/umt5-base"]
