--- a/config_seq2seq_T5.yaml
+++ b/config_seq2seq_T5.yaml
@@ -11,6 +11,10 @@ parameters:
     values: [4, 8, 16, 32]
   epochs:
     values: [2, 4, 8]
+  target_seq_len:
+    values: [10, 50, 100, 200]
+  source_seq_len:
+    values: [10, 50, 100, 200]
   optimizer:
     values: ["adam", "adamw", "sgd", "asgd"]
   hf_model_name:
